--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,11 @@
     }
   ],
   "dependencies": {
-    "disa-framework": "file:../lib"
+    "disa-framework": "file:../lib",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +43,8 @@
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.12.3",
     "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.12.1"
+    "@babel/preset-typescript": "^7.12.1",
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.1"
   }
 }
