--- a/package.json
+++ b/package.json
@@ -9,27 +9,6 @@
       "email": "joerg.jonas.krahn@iav.de"
     }
   ],
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^12.20.7",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "aws-amplify": "^3.3.26",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0",
-    "primereact": "^6.2.1",
-    "radium": "^0.26.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.1",
-    "typescript": "^4.2.4",
-    "web-vitals": "^1.1.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -65,13 +44,35 @@
   "keywords": [
     "disa-framework"
   ],
+  "dependencies": {
+    "aws-amplify": "^3.3.26",
+    "primereact": "^6.2.1",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.12.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^12.20.7",
     "@types/radium": "^0.24.3",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "radium": "^0.26.1",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.4"
   }
 }
