--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "disa-framework"
   ],
   "dependencies": {
-    "aws-amplify": "^3.3.26",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.2.1"
@@ -71,6 +70,7 @@
     "@types/react-router-dom": "^5.1.7",
     "radium": "^0.26.1",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "aws-amplify": "^3.3.26"
   }
 }
