--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "dependencies": {
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "primereact": "^6.2.1"
+    "primereact": "^6.2.1",
+    "radium": "^0.26.1"
   },
   "peerDependencies": {
     "react": "^17.0.1",
@@ -68,7 +69,6 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
-    "radium": "^0.26.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "aws-amplify": "^3.3.26"
