--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ publish_package:
         exit 1
       }
   rules:
-    - if: '$CI_COMMIT_BRANCH == "develop"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
 
 # Create release so observer of this project will get a notification e-mail.
 create_release:
@@ -79,4 +79,4 @@ create_release:
     tag_name: ver_$(node -p "require('./package.json').version")
     description: ./scripts/ci_cd/release_notes/$(node -p "require('./package.json').version").md
   rules:
-    - if: '$CI_COMMIT_BRANCH == "develop"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
