--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,16 +4,10 @@ default:
   before_script:
     - chmod -R +x ./scripts/ci_cd/
 
-stages:
-  - validate
-  - build
-  - publish
-  - release
-
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
 validate_package_scope:
-  stage: validate
+  stage: build
   script:
     - source ./scripts/ci_cd/set_npm_variables.sh
     - |
@@ -34,7 +28,7 @@ validate_package_scope:
 # If no .npmrc if included in the repo, generate a temporary one to use during the publish step
 # that is configured to publish to GitLab's NPM registry
 create_npmrc:
-  stage: validate
+  stage: build
   script:
     - |
       if [[ ! -f .npmrc ]]; then
@@ -53,24 +47,14 @@ create_npmrc:
   rules:
     - if: '$CI_COMMIT_BRANCH == "develop"'
 
-# Builds the framework
-build_package:
-  stage: build
-  script:
-    - ./scripts/ci_cd/setup_npm.sh
-    - npm run build-linux
-  artifacts:
-    paths:
-      - ./build
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "develop"'
-
 # Publish the package. If the version in package.json has not yet been published, it will be
 # published to GitLab's NPM registry. If the version already exists, the publish command
 # will fail and the existing package will not be updated.
 publish_package:
-  stage: publish
+  stage: deploy
   script:
+    - ./scripts/ci_cd/setup_npm.sh
+    - npm run build-linux
     - |
       {
         cd ./build &&
@@ -85,7 +69,7 @@ publish_package:
 
 # Create release so observer of this project will get a notification e-mail.
 create_release:
-  stage: release
+  stage: .post
   image: registry.gitlab.com/gitlab-org/release-cli:v0.6.0
   variables:
     SSL_CERT_FILE: $IAV_CA_BUNDLE
