--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @td-d:registry=https://gitlab.iavgroup.local/api/v4/projects/8537/packages/npm/
-'//gitlab.iavgroup.local/api/v4/projects/8537/packages/npm/:_authToken'="ypDVeJ9dD1M1B5tGF-b3"
+//gitlab.iavgroup.local/api/v4/projects/8537/packages/npm/:_authToken=ypDVeJ9dD1M1B5tGF-b3
