--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.12.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/gitlab": "^6.2.1",
+    "@semantic-release/npm": "^7.1.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -69,6 +72,7 @@
     "@types/react-router-dom": "^5.1.7",
     "aws-amplify": "^3.3.26",
     "react-scripts": "4.0.3",
+    "semantic-release": "^17.4.4",
     "typescript": "^4.2.4"
   }
 }
