--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -82,6 +82,8 @@
     "./moduleOrchestrationTypes": "./dist/types/modules/moduleOrchestrationTypes.js",
     "./createModules": "./dist/modules/module_orchestration/createModules.js",
     "./createModulesSeperately": "./dist/modules/module_orchestration/createModulesSeperately.js",
+    "./checkIfUserModulesKeysValid": "./dist/modules/module_orchestration/util/checkIfUserModulesKeysValid.js",
+    "./seperateModuleTypes": "./dist/modules/module_orchestration/util/seperateModuleTypes.js",
     "./storeBuilder": "./dist/modules/module_orchestration/storeBuilder.js",
     "./storeConfig": "./dist/modules/module_orchestration/storeConfig.js",
     "./storeConfigBuilder": "./dist/modules/module_orchestration/storeConfigBuilder.js",
@@ -129,6 +131,12 @@
       ],
       "./createModulesSeperately": [
         "./dist/modules/module_orchestration/createModulesSeperately.js"
+      ],
+      "./checkIfUserModulesKeysValid": [
+        "./dist/modules/module_orchestration/util/checkIfUserModulesKeysValid.d.ts"
+      ],
+      "./seperateModuleTypes": [
+        "./dist/modules/module_orchestration/util/seperateModuleTypes.d.ts"
       ],
       "./storeBuilder": [
         "./dist/modules/module_orchestration/storeBuilder.d.ts"
